--- a/index.html
+++ b/index.html
@@ -1,106 +1,108 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="author" content="Bootstrap-ecommerce by Vosidiy">
-<title>Squanchy POS</title>
-<link rel="shortcut icon" type="image/x-icon" href="assets/images/logos/squanchy.jpg" >
-<link rel="apple-touch-icon" sizes="180x180" href="assets/images/logos/squanchy.jpg">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/images/logos/squanchy.jpg">
-<!-- jQuery -->
-<!-- Bootstrap4 files-->
-<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css"/> 
-<link href="assets/css/ui.css" rel="stylesheet" type="text/css"/>
-<link href="assets/fonts/fontawesome/css/fontawesome-all.min.css" type="text/css" rel="stylesheet">
-<link href="assets/css/OverlayScrollbars.css" type="text/css" rel="stylesheet"/>
-<!-- Font awesome 5 -->
-<style>
-	.avatar {
-  vertical-align: middle;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-}
-.bg-default, .btn-default{
-	background-color: #f2f3f8;
-}
-.btn-error{
-	color: #ef5f5f;
-}
-</style>
-<!-- custom style -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Bootstrap-ecommerce by Vosidiy">
+    <title>Squanchy POS</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logos/squanchy.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logos/squanchy.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logos/squanchy.jpg">
+    <!-- jQuery -->
+    <!-- Bootstrap4 files-->
+    <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/ui.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/fonts/fontawesome/css/fontawesome-all.min.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/OverlayScrollbars.css" type="text/css" rel="stylesheet"/>
+    <!-- Font awesome 5 -->
+    <style>
+        .avatar {
+            vertical-align: middle;
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+        }
+
+        .bg-default, .btn-default {
+            background-color: #f2f3f8;
+        }
+
+        .btn-error {
+            color: #ef5f5f;
+        }
+    </style>
+    <!-- custom style -->
 </head>
 <body>
 <section class="header-main">
-	<div class="container">
-<div class="row align-items-center">
-	<div class="col-lg-3">
-	<div class="brand-wrap">
-		<img class="logo" src="assets/images/logos/squanchy.jpg">
-		<h2 class="logo-text">Squanchy POS</h2>
-	</div> <!-- brand-wrap.// -->
-	</div>
-	<div class="col-lg-6 col-sm-6">
-		<form action="#" class="search-wrap">
-			<div class="input-group">
-			    <input type="text" class="form-control" placeholder="Search">
-			    <div class="input-group-append">
-			      <button class="btn btn-primary" type="submit">
-			        <i class="fa fa-search"></i>
-			      </button>
-			    </div>
-		    </div>
-		</form> <!-- search-wrap .end// -->
-	</div> <!-- col.// -->
-	<div class="col-lg-3 col-sm-6">
-		<div class="widgets-wrap d-flex justify-content-end">
-			<div class="widget-header">
-				<a href="#" class="icontext">
-					<a href="#" class="btn btn-primary m-btn m-btn--icon m-btn--icon-only">
-															<i class="fa fa-home"></i>
-														</a>
-				</a>
-			</div> <!-- widget .// -->
-			<div class="widget-header dropdown">
-				<a href="#" class="ml-3 icontext" data-toggle="dropdown" data-offset="20,10">
-					<img src="assets/images/avatars/bshbsh.png" class="avatar" alt="">
-				</a>
-				<div class="dropdown-menu dropdown-menu-right">
-						<a class="dropdown-item" href="#"><i class="fa fa-sign-out-alt"></i> Logout</a>
-				</div> <!--  dropdown-menu .// -->
-			</div> <!-- widget  dropdown.// -->
-		</div>	<!-- widgets-wrap.// -->	
-	</div> <!-- col.// -->
-</div> <!-- row.// -->
-	</div> <!-- container.// -->
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-3">
+                <div class="brand-wrap">
+                    <img class="logo" src="assets/images/logos/squanchy.jpg">
+                    <h2 class="logo-text">Squanchy POS</h2>
+                </div> <!-- brand-wrap.// -->
+            </div>
+            <div class="col-lg-6 col-sm-6">
+                <form action="#" class="search-wrap">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="submit">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form> <!-- search-wrap .end// -->
+            </div> <!-- col.// -->
+            <div class="col-lg-3 col-sm-6">
+                <div class="widgets-wrap d-flex justify-content-end">
+                    <div class="widget-header">
+                        <a href="#" class="icontext">
+                            <a href="#" class="btn btn-primary m-btn m-btn--icon m-btn--icon-only">
+                                <i class="fa fa-home"></i>
+                            </a>
+                        </a>
+                    </div> <!-- widget .// -->
+                    <div class="widget-header dropdown">
+                        <a href="#" class="ml-3 icontext" data-toggle="dropdown" data-offset="20,10">
+                            <img src="assets/images/avatars/bshbsh.png" class="avatar" alt="">
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#"><i class="fa fa-sign-out-alt"></i> Logout</a>
+                        </div> <!--  dropdown-menu .// -->
+                    </div> <!-- widget  dropdown.// -->
+                </div>    <!-- widgets-wrap.// -->
+            </div> <!-- col.// -->
+        </div> <!-- row.// -->
+    </div> <!-- container.// -->
 </section>
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content padding-y-sm bg-default ">
-<div class="container-fluid">
-<div class="row">
-	<div class="col-md-8 card padding-y-sm card ">
-		<ul class="nav bg radius nav-pills nav-fill mb-3 bg" role="tablist">
-	<li class="nav-item">
-		<a class="nav-link active show" data-toggle="pill" href="#nav-tab-card">
-		<i class="fa fa-tags"></i> All</a></li>
-	<li class="nav-item">
-		<a class="nav-link" data-toggle="pill" href="#nav-tab-paypal">
-		<i class="fa fa-tags "></i>  Category 1</a></li>
-	<li class="nav-item">
-		<a class="nav-link" data-toggle="pill" href="#nav-tab-bank">
-		<i class="fa fa-tags "></i>  Category 2</a></li>
-		 <li class="nav-item">
-		<a class="nav-link" data-toggle="pill" href="#nav-tab-bank">
-		<i class="fa fa-tags "></i>  Category 3</a></li>
-		<li class="nav-item">
-		<a class="nav-link" data-toggle="pill" href="#nav-tab-bank">
-		<i class="fa fa-tags "></i>  Category 4</a></li>
-		<li class="nav-item">
-		<a class="nav-link" data-toggle="pill" href="#nav-tab-bank">
-		<i class="fa fa-tags "></i>  Category 5</a></li>
-</ul>
-<span   id="items">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8 card padding-y-sm card ">
+                <ul class="nav bg radius nav-pills nav-fill mb-3 bg" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active show" data-toggle="pill" href="#nav-tab-card">
+                            <i class="fa fa-tags"></i> All</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" href="#nav-tab-paypal">
+                            <i class="fa fa-tags "></i> Category 1</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" href="#nav-tab-bank">
+                            <i class="fa fa-tags "></i> Category 2</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" href="#nav-tab-bank">
+                            <i class="fa fa-tags "></i> Category 3</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" href="#nav-tab-bank">
+                            <i class="fa fa-tags "></i> Category 4</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" href="#nav-tab-bank">
+                            <i class="fa fa-tags "></i> Category 5</a></li>
+                </ul>
+                <span id="items">
 <div class="row">
 <div class="col-md-3">
 	<figure class="card card-product">
@@ -246,9 +248,9 @@
 </div> <!-- col // -->
 </div> <!-- row.// -->
 </span>
-	</div>
-	<div class="col-md-4">
-<div class="card">
+            </div>
+            <div class="col-md-4">
+                <div class="card">
 	<span id="cart">
 <table class="table table-hover shopping-cart-wrap">
 <thead class="text-muted">
@@ -271,9 +273,15 @@
 	</td>
 	<td class="text-center"> 
 		<div class="m-btn-group m-btn-group--pill btn-group mr-2" role="group" aria-label="...">
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-minus"></i></button>
-																		<button type="button" class="m-btn btn btn-default" disabled>3</button>
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-plus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-minus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"
+                                                                                disabled>3</button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-plus"></i></button>
 																	</div>
 	</td>
 	<td> 
@@ -296,9 +304,15 @@
 	</td>
 	<td class="text-center"> 
 				<div class="m-btn-group m-btn-group--pill btn-group mr-2" role="group" aria-label="...">
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-minus"></i></button>
-																		<button type="button" class="m-btn btn btn-default" disabled>1</button>
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-plus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-minus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"
+                                                                                disabled>1</button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-plus"></i></button>
 																	</div>
 	</td>
 	<td> 
@@ -321,9 +335,15 @@
 	</td>
 	<td class="text-center"> 
 				<div class="m-btn-group m-btn-group--pill btn-group mr-2" role="group" aria-label="...">
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-minus"></i></button>
-																		<button type="button" class="m-btn btn btn-default" disabled>5</button>
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-plus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-minus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"
+                                                                                disabled>5</button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-plus"></i></button>
 																	</div>
 	</td>
 	<td> 
@@ -346,9 +366,15 @@
 	</td>
 	<td class="text-center"> 
 				<div class="m-btn-group m-btn-group--pill btn-group mr-2" role="group" aria-label="...">
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-minus"></i></button>
-																		<button type="button" class="m-btn btn btn-default" disabled>2</button>
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-plus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-minus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"
+                                                                                disabled>2</button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-plus"></i></button>
 																	</div>
 	</td>
 	<td> 
@@ -371,9 +397,15 @@
 	</td>
 	<td class="text-center"> 
 				<div class="m-btn-group m-btn-group--pill btn-group mr-2" role="group" aria-label="...">
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-minus"></i></button>
-																		<button type="button" class="m-btn btn btn-default" disabled>1</button>
-																		<button type="button" class="m-btn btn btn-default"><i class="fa fa-plus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-minus"></i></button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"
+                                                                                disabled>1</button>
+																		<button type="button"
+                                                                                class="m-btn btn btn-default"><i
+                                                                                class="fa fa-plus"></i></button>
 																	</div>
 	</td>
 	<td> 
@@ -388,53 +420,57 @@
 </tbody>
 </table>
 </span>
-</div> <!-- card.// -->
-<div class="box">
-<dl class="dlist-align">
-  <dt>Tax: </dt>
-  <dd class="text-right">12%</dd>
-</dl>
-<dl class="dlist-align">
-  <dt>Discount:</dt>
-  <dd class="text-right"><a href="#">0%</a></dd>
-</dl>
-<dl class="dlist-align">
-  <dt>Sub Total:</dt>
-  <dd class="text-right">$215</dd>
-</dl>
-<dl class="dlist-align">
-  <dt>Total: </dt>
-  <dd class="text-right h4 b"> $215 </dd>
-</dl>
-<div class="row">
-	<div class="col-md-6">
-		<a href="#" class="btn  btn-default btn-error btn-lg btn-block"><i class="fa fa-times-circle "></i> Cancel </a>
-	</div>
-	<div class="col-md-6">
-		<a href="#" class="btn  btn-primary btn-lg btn-block"><i class="fa fa-shopping-bag"></i> Charge </a>
-	</div>
-</div>
-</div> <!-- box.// -->
-	</div>
-</div>
-</div><!-- container //  -->
+                </div> <!-- card.// -->
+                <div class="box">
+                    <dl class="dlist-align">
+                        <dt>Tax:</dt>
+                        <dd class="text-right">12%</dd>
+                    </dl>
+                    <dl class="dlist-align">
+                        <dt>Discount:</dt>
+                        <dd class="text-right"><a href="#">0%</a></dd>
+                    </dl>
+                    <dl class="dlist-align">
+                        <dt>Sub Total:</dt>
+                        <dd class="text-right">$215</dd>
+                    </dl>
+                    <dl class="dlist-align">
+                        <dt>Total:</dt>
+                        <dd class="text-right h4 b"> $215</dd>
+                    </dl>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a href="#" class="btn  btn-default btn-error btn-lg btn-block"><i
+                                    class="fa fa-times-circle "></i> Cancel </a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="#" class="btn  btn-primary btn-lg btn-block"><i class="fa fa-shopping-bag"></i>
+                                Charge </a>
+                        </div>
+                    </div>
+                </div> <!-- box.// -->
+            </div>
+        </div>
+    </div><!-- container //  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 <script src="assets/js/jquery-2.0.0.min.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 <script src="assets/js/OverlayScrollbars.js" type="text/javascript"></script>
 <script>
-	$(function() {
-	//The passed argument has to be at least a empty object or a object with your desired options
-	//$("body").overlayScrollbars({ });
-	$("#items").height(552);
-	$("#items").overlayScrollbars({overflowBehavior : {
-		x : "hidden",
-		y : "scroll"
-	} });
-	$("#cart").height(445);
-	$("#cart").overlayScrollbars({ });
-});
+    $(function () {
+        //The passed argument has to be at least a empty object or a object with your desired options
+        //$("body").overlayScrollbars({ });
+        $("#items").height(552);
+        $("#items").overlayScrollbars({
+            overflowBehavior: {
+                x: "hidden",
+                y: "scroll"
+            }
+        });
+        $("#cart").height(445);
+        $("#cart").overlayScrollbars({});
+    });
 </script>
 </body>
 </html>
